atlassian/bitbucket/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bitbucket
spec:
  type: NodePort
  selector:
    app: bitbucket
  ports:
    - name: http
      port: 7990
      targetPort: 7990
    - name: ssh
      port: 7999
      targetPort: 7999
